version/0.19/_sources/api/solver/_autosummary/settings/vapor_pressure.rst.txt
:orphan:

.. _vapor_pressure:

vapor_pressure
==============

.. autoclass:: ansys.fluent.core.solver.settings_241.vapor_pressure.vapor_pressure
    :show-inheritance:

.. rubric:: Attributes

====================================================   ============================================================

Attribute                                                                                                   Summary

====================================================   ============================================================
:ref:`option <option_7>`                                           Select method for calculating material property.

:ref:`piecewise_linear <piecewise_linear_1>`               Specify ranges and values for piecewise-linear property.

:ref:`piecewise_polynomial <piecewise_polynomial>`                           Specify piecewise-polynomial settings.

:ref:`polynomial <polynomial_1>`                                                   Specify polynomial coefficients.

:ref:`value <value_3>`                                                         Specify the constant property value.

:ref:`rgp_table <rgp_table>`                                                             Select RGP Table Data Set.

:ref:`user_defined_function <user_defined_function>`                                 'user_defined_function' child.

====================================================   ============================================================

.. rubric:: Included in:

======================================================   ============================================

Parent                                                                                        Summary

======================================================   ============================================
:ref:`droplet_particle_child <droplet_particle_child>`       'child_object_type' of droplet_particle.

======================================================   ============================================

