version/0.25/_sources/api/solver/_autosummary/settings/vapor_pressure.rst.txt
:orphan:

.. _vapor_pressure:

vapor_pressure
==============

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.vapor_pressure.vapor_pressure
    :show-inheritance:

.. rubric:: Attributes

====================================================   ============================================================

Attribute                                                                                                   Summary

====================================================   ============================================================
:ref:`option <option_12>`                                          Select method for calculating material property.

:ref:`piecewise_linear <piecewise_linear_2>`               Specify ranges and values for piecewise-linear property.

:ref:`piecewise_polynomial <piecewise_polynomial>`                                   Piecewise polynomial settings.

:ref:`polynomial <polynomial_2>`                                                               Polynomial settings.

:ref:`value <value_11>`                                                        Specify the constant property value.

:ref:`rgp_table <rgp_table>`                                                             Select RGP Table Data Set.

:ref:`user_defined_function <user_defined_function>`                                 Specify user defined function.

====================================================   ============================================================

.. rubric:: Included in:

======================================================   ============================================

Parent                                                                                        Summary

======================================================   ============================================
:ref:`droplet_particle_child <droplet_particle_child>`       'child_object_type' of droplet_particle.

:ref:`material_child <material_child_1>`                             'child_object_type' of material.

======================================================   ============================================

